# IV-Proyecto

./: DOCKER_USER  Dockerfile  README.md  azure-pipelines.yml  iv.yaml  pyproject.toml  tasks.py
.circleci/: config.yml
.github/workflows/: Actualizar_imagen_DockerHub.yml  Actualizar_readme_DockerHub.yml  Testear_UltimaVersion_Contenedor.yml  Testear_versiones.yml  upload_to_DockerHub.yml
.semaphore/: semaphore.yml
docs/: README.md
serieMotion/: caracteristicas.py  funciones.py  serie.py
source/: KNN.py  caracteristicas.py  catalogo.py  funciones.py  serie.py
tests/: funciones_tests.py  test_data.txt  test_festimacion.py  test_regLin.py  train_data.txt
