[tool.poetry]
name = "source"
version = "0.1.0"
description = ""
authors = ["pablo <PRM00@protonmail.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

